--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
     package="com.example.huangshan">
     <!-- 网络访问权限 -->
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 允许程序设置内置sd卡的写权限 -->
@@ -23,12 +21,20 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="黄山"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:replace="android:icon,android:theme,android:allowBackup,android:label,android:supportsRtl">
-        <activity android:name=".activity.ListAdminsActivity"></activity>
+        <activity android:name=".activity.SplashActivity" android:theme="@style/SplashActivityTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.SettingsActivity" />
+        <activity android:name=".activity.AboutActivity" />
+        <activity android:name=".activity.ListAdminsActivity" />
         <activity android:name=".activity.AdminInformationActivity" />
         <activity android:name=".activity.UsersManageActivity" />
         <activity android:name=".activity.AdminsMapViewActivity" />
@@ -42,13 +48,7 @@
         <activity android:name=".activity.WeatherActivity" />
         <activity android:name=".activity.BaseActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".activity.MainActivity"></activity>
     </application>
 
 </manifest>
